k3s/monitoring/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: default
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: node-exporter
        image: prom/node-exporter:v1.8.1
        imagePullPolicy: IfNotPresent
        args:
        - "--path.procfs=/host/proc"
        - "--path.sysfs=/host/sys"
        - "--path.rootfs=/rootfs"
        - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($|/)"
        ports:
        - containerPort: 9100
          name: scrape
        resources:
          limits:
            cpu: "200m"
            memory: 128Mi
          requests:
            cpu: "100m"
            memory: 64Mi
        securityContext:
          privileged: true
        volumeMounts:
        - name: proc
          mountPath: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readOnly: true
        - name: rootfs
          mountPath: /rootfs
          readOnly: true
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: sys
        hostPath:
          path: /sys
      - name: rootfs
        hostPath:
          path: /

---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: default
  labels:
    app: node-exporter
spec:
  ports:
  - port: 9100
    targetPort: 9100
    name: scrape
  selector:
    app: node-exporter
